# support-bot

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
audio/: speech.py
knowledge_base/: common_issues.md  contact_escalation.md  returns_policy.md  shipping_info.md
sample_conversations/: frustrated_customer.md  rag_query.md  standard_issue.md
support_bot/: __init__.py  agent.py  callbacks.py  prompts.py
support_bot/models/: schemas.py
support_bot/storage/: knowledge_base.py  session_store.py
support_bot/tools/: rag_tools.py  sentiment_tools.py  support_tools.py  validation_tools.py
tests/integration/: test_agent_flow.py
tests/integration/fixtures/: invalid_order.test.json  standard_flow.test.json
tests/unit/: test_schemas.py  test_storage.py  test_validation_tools.py
